[tool.poetry]
name = "cryptography"
version = "0.1.0"
description = ""
authors = ["Fadab2 <ali_berg1@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
nltk = "^3.6.7"
pytest = "^7.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
